# SOIKA

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  README.rst  README_old.rst  README_old_ru.rst  README_ru.rst  TF-IDF_classifier.ipynb  pyproject.toml  requirements.txt  spacy.ipynb
.github/workflows/: checks.yml  tests.yml
classifier/: __init__.py
classifier_files/: model_classifier.sav  requirements.txt
docs/source/: about.rst  conf.py  contribution.rst  index.rst
docs/source/components/: event_detection.rst  geocoder.rst  index.rst
docs/source/soika/: index.rst  installation.rst  soika.rst
examples/: address_extractor_example.ipynb  classifier_example.ipynb  event_detection_example.ipynb  geocoder_example.ipynb  pipeline_example.ipynb  reqs.txt  sample_data.csv  topic_classifier_example.ipynb
factfinder/: __init__.py
factfinder/src/: __init__.py  address_extractor.py  classifier.py  event_detection.py  exceptions_countries.csv  geocoder.py  location_finder.py  messages.csv  text_classifier.py  text_classifier_topics.py
location_finder_model/: meta.json
location_finder_model/flair/: address_extractor.py
location_finder_model/ner/: model
my_model_streets/: config.cfg
my_model_streets/ner/: model  moves
my_model_streets/vocab/: strings.json
notebooks/: TF-IDF_classifier.ipynb  spacy.ipynb
semantic_vector/: README.md
tests/: test_classifier.py  test_classifier_topic.py  test_events_modelling.py  test_location.py
ysc_examples/: event_detection_example.ipynb  events.geojson
