[tool.poetry]
name = "factfinder"
version = "0.1.0"
description = ""
authors = ["pacificus <masterkristall@gmail.com>"]
readme = "README.rst"
packages = [{include = "factfinder"}]

[tool.poetry.dependencies]
python = "^3.8.1"
pandas = "^1.5.3"
matplotlib = "^3.7.0"
seaborn = "^0.12.2"
nltk = "^3.8.1"
scikit-learn = "^1.2.1"
spacy = "^3.5.0"
fuzzywuzzy = "^0.18.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
black = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80

[tool.isort]
profile = 'black'
line_length = 80
